inicio terminado + iconos

--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -12,6 +12,7 @@
     <!-- Bootstrap JS -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/d3ba0e2c6d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./assets/styles/preguntas-frecuentes/styles.css">
 </head>
 <body>       
   <header id="header">
@@ -76,11 +77,22 @@
         </div>
     </ul>
 
-    <main>
-      
-      <h1>preguntas frecuentes</h1>
-      
+    <main style="margin-bottom: 50px;">
+
+      <div id="div-preguntas" style="text-align: center;">
+        <h1 id="titulo-preguntas-frecuentes">preguntas frecuentes</h1>
+
+        <div style="padding: 10px;">
+          <p class="preguntaFrecuente"><a href="#">¿Cuáles son los horarios de atención de la farmacia?</a></p>
+          <p class="preguntaFrecuente"><a href="#">¿Ofrecen servicios de entrega a domicilio?</a></p>
+          <p class="preguntaFrecuente"><a href="#">¿Cuáles son los métodos de pago aceptados en la farmacia?</a></p>
+          <p class="preguntaFrecuente"><a href="#">¿Qué debo hacer si tengo una reacción adversa a un medicamento?</a></p>
+          <p class="preguntaFrecuente"><a href="#">¿Farmacity tiene un programa de lealtad o tarjeta de descuentos para clientes frecuentes?</a></p>
+        </div>
+
+      </div>  
     </main>
+
 
 
     <div class="footer">
