--- a/productos.html
+++ b/productos.html
@@ -94,7 +94,7 @@
         </div>
     </ul>
 
-    <main style="min-height: 500px;">
+    <main style="min-height: 500px; margin-bottom: 50px;">
 
       <div id="alert-noProducts"></div>
       
