--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -84,10 +84,9 @@
             <h2><img src="./assets/img/logo-farmacity-azul.png" alt="" id="farmacity-foto-sn"></h2>
             <p style="text-align: left; font-size: 18px;" id="info-farmacity"></p>
         </div>
-        <div class="section right-section">
-            <h2>Sección Derecha</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at erat eu nulla ultricies lacinia. Morbi interdum ligula nec ipsum accumsan, at tincidunt magna eleifend.</p>
-        </div>
+        <div class="section right-section" style="text-align: center;">
+            <h4>Cómo llegar</h4>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6810.406271102114!2d-64.19748619657175!3d-31.408528904274444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a282b0dee173%3A0x5d831c210dc10566!2sFarmacity!5e0!3m2!1ses!2sar!4v1698617409349!5m2!1ses!2sar" width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
       
     </main>
