--- a/medicamentos.html
+++ b/medicamentos.html
@@ -110,7 +110,7 @@
         </div>
     </ul>
 
-    <main style="min-height: 500px;">
+    <main style="min-height: 500px; margin-bottom: 50px;">
 
       <div class="alert15">
         <div class="alert-heading15">Requsitos para la compra de medicamentos bajo receta</div>
