--- a/vacunacion.html
+++ b/vacunacion.html
@@ -77,7 +77,7 @@
         </div>
     </ul>
 
-    <main>
+    <main style="margin-bottom: 50px;">
       
       <div class="form-container5">
         <h2>Solicitud de Turnos</h2>
