retoques paginas admin

--- a/ADMIN-medicamentos.html
+++ b/ADMIN-medicamentos.html
@@ -59,20 +59,9 @@
 
     <main>
 
-      <h2>Medicamentos</h2>
+      <div id="alert-noProducts"></div>
 
-      <table id="medicamentos-table">
-          <thead>
-            <tr>
-              <th>Nombre</th>
-              <th>Descripción</th>
-              <th>Precio</th>
-              <th>Imagen</th>
-              <th><i class="fa-solid fa-screwdriver-wrench"></i></th>
-            </tr>
-          </thead>
-          <tbody id="admin-tabla-medicamentos"></tbody>
-      </table>
+      <div id="container-tableMedicamentos"></div>
         
       <p id="titulo-crear-producto">Crear Medicamento</p>
       <form id="productForm" enctype="multipart/form-data">
