--- a/contacto.html
+++ b/contacto.html
@@ -65,13 +65,13 @@
   
       <a href="#" class="item" style="text-decoration: none;">
         <div id="publi-2">
-          <span class="carrousel-span"><i class="fa-solid fa-syringe"></i>Vacunate contra la gripe !!</span>
+          <span class="carrousel-span"><i class="fa-solid fa-syringe" style="margin-right: 15px;"></i>Vacunate contra la gripe</span>
         </div>
       </a>
   
       <a href="#" class="item" style="text-decoration: none;">
         <div id="publi-3">
-          <span class="carrousel-span"><img src="" alt="">Medicate forro HDP !!</span>
+          <span class="carrousel-span"><img src="" alt="">¿Ya sos parte de #TuFarmacity?</span>
         </div>
       </a>
   </div>
