agregando secciones admin

--- a/farmacity.html
+++ b/farmacity.html
@@ -78,6 +78,9 @@
 
     <main>
 
+      <!-- admin button -->
+      <a href="ADMIN-login.html" id="boton-admin-a"><button id="boton-admin"><i class="fa-solid fa-database"></i></button></a>
+
       <div class="contenedor-padre">
         <div class="mitad-izquierda" style="text-align: center;">
           <div class="contenedor-tarjeta">
