añadiendo estilos a pagina admin

--- a/ADMIN-login.html
+++ b/ADMIN-login.html
@@ -12,9 +12,12 @@
         
         <form id="loginForm">
           <input type="text" name="username" id="username" placeholder="Usuario" autocomplete="off">
-          <input type="password" name="password" id="password" placeholder="Contraseña" autocomplete="">
+          <input type="password" name="password" id="password" placeholder="Contraseña" autocomplete="off">
           <input type="submit" value="Login">
         </form>
+
+        <div id="credentialsErr"></div>
+
       </div>
 </body>
 <script src="js/login/login.js"></script>
