--- a/ADMIN-medicamentos.html
+++ b/ADMIN-medicamentos.html
@@ -45,7 +45,7 @@
       <div id="container-tableMedicamentos"></div>
     </div>
     <div class="right-pane">
-      <form id="productForm" enctype="multipart/form-data">
+      <form id="productForm" enctype="multipart/form-data" style="margin-top: 3px; border-radius: 0;">
         <label for="productName">Nombre del Medicamento</label><br>
         <input type="text" id="productName" name="productName"><br><br>
     
