--- a/farmacity.html
+++ b/farmacity.html
@@ -79,7 +79,7 @@
     <main>
 
       <!-- admin button -->
-      <a href="ADMIN-login.html" id="boton-admin-a"><button id="boton-admin"><i class="fa-solid fa-database"></i></button></a>
+      <a href="ADMIN-login.html" id="boton-admin-a"><button id="boton-admin"><i class="fa-solid fa-database"> <span style="font-size: 12px;">DataBase</span></i></button></a>
 
       <div class="contenedor-padre">
         <div class="mitad-izquierda" style="text-align: center;">
