--- a/ADMIN-inicio.html
+++ b/ADMIN-inicio.html
@@ -58,9 +58,7 @@
 
     </main>
 
-    <div id="divBotonEmpleados">
-      
-    </div>
+    <footer style="background-color:  orangered; width: 100%; height: 10px;"></footer>
 
 </body>
 
