--- a/ADMIN-medicamentos.html
+++ b/ADMIN-medicamentos.html
@@ -66,7 +66,7 @@
 </form>
 </div>
 
-
+<footer style="background-color:  orangered; width: 100%; height: 10px;"></footer>
 
 </body>
 <script src="./js/admin/admin.js"></script>
