--- a/ADMIN-productos.html
+++ b/ADMIN-productos.html
@@ -71,7 +71,7 @@
 
 </main>
 
-
+<footer style="background-color:  orangered; width: 100%; height: 10px;"></footer>
 </body>
 <script src="./js/admin/admin.js"></script>
 <script src="./js/productos/productos.js"></script>
