--- a/ADMIN-vacunacion.html
+++ b/ADMIN-vacunacion.html
@@ -43,12 +43,11 @@
     <main>
         <h3 id="h3-vacunacion"></h3>
         
-        <div id="tabla-vacunacion"></div>
+        <div id="tabla-vacunacion" style="margin-bottom: 30px;"></div>
       
         <div id="alerta-nodata"></div>
 
     </main>
-
 
 </body>
 <script src="./js/turnos/turnos.js"></script>
