--- a/index.html
+++ b/index.html
@@ -6,13 +6,9 @@
     <title>Farmacity</title>
 </head>
 <body>
-    <form>
-        <input type="text" id="nombre">
-        <input type="text" id="apellido">
-        <input type="text" id="edad">
-        <input type="button" value="Guardar" id="guardar">
-    </form>
-    <p id="mostrar"></p>
+    
 </body>
-<script src="js/index.js"></script>
+<script>
+    window.location.href = "farmacity.html"
+</script>
 </html>
